# alpha-tracker

./: .gitignore  README.md  pyproject.toml
alphatracker/: db.sqlite3  manage.py  pytest.ini
alphatracker/alphatracker/: asgi.py  settings.py  urls.py  wsgi.py
alphatracker/finance/: admin.py  authentication.py  beta_test.py  forms.py  models.py  urls.py  views.py
alphatracker/finance/management/commands/: load_assets.py  load_prices.py
alphatracker/finance/migrations/: 0001_initial.py  0002_profile_delete_user.py  0003_order.py  0004_order_user.py  0005_profile_assets.py
alphatracker/finance/static/css/: base.css
alphatracker/finance/templates/: base.html
alphatracker/finance/templates/finance/: asset.html  create.html  dashboard.html  edit.html  list.html  portfolio.html  register.html  register_done.html
alphatracker/finance/templates/registration/: login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html
alphatracker/tests/: tests.py
