[tool.poetry]
name = "alpha-tracker"
version = "0.1.0"
description = ""
authors = ["Oliver Then <oli171dr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
python-decouple = "^3.8"
requests = "^2.31.0"
numpy = "^1.26.2"
yfinance = "^0.2.33"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
